<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:id="@+id/imgFirst"
        android:layout_width="35dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilFirst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilFirst"
        app:srcCompat="@drawable/ic_baseline_person_pin_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFirst"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgSecond"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilSecond"
        app:srcCompat="@drawable/ic_baseline_person_pin_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgSecond"
        app:layout_constraintTop_toBottomOf="@+id/tilFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgEmail1"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilEmail1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilEmail1"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgEmail1"
        app:layout_constraintTop_toBottomOf="@+id/tilSecond">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgPassword1"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilPassword1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilPassword1"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgPassword1"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgPassword2"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilPassword2"
        app:srcCompat="@drawable/ic_baseline_lock_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgPassword2"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword1"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/already_have_an_account_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="212dp"
        android:layout_height="57dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/tilFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_person_24" />

</androidx.constraintlayout.widget.ConstraintLayout>